# democracy-batsignal

./: .gitignore  README.md  template_maker.ps1  template_maker.sh
my_project/: batch_example_python_cli_parallel.sh  batch_example_python_cli_simple.sh  pyproject.toml
my_project/JSON_dualgraphs/: MN_precincts.geojson
my_project/chain_outputs/: ben_to_xben.sh  jsonl_to_ben.sh
my_project/pipeline_scripts/: example_cli.py  rust_example_script.sh
my_project/pipeline_scripts/metrics/: process_partisan_bias.py  process_polsby.py  process_reock.py  process_splits.py  process_total_dem_wins.py
