[project]
name = "my-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "binary-ensemble>=0.3.0",
    "black>=25.11.0",
    "click>=8.3.1",
    "docker>=7.1.0",
    "gerrychain[geo]>=0.3.2",
    "gerrytools>=1.2.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "joblib>=1.5.2",
    "joblib-progress>=1.0.6",
    "matplotlib>=3.10.7",
    "maup>=2.0.3",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "tool>=0.8.0",
]
